<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateStudentActivity">

    <EditText
        android:id="@+id/new_student_email_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:ems="10"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        app:layout_constraintBaseline_toBaselineOf="@+id/new_student_email_field_title"
        app:layout_constraintStart_toEndOf="@+id/new_student_email_field_title" />

    <EditText
        android:id="@+id/new_student_national_id_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:ems="10"
        android:inputType="text"
        android:autofillHints=""
        app:layout_constraintBaseline_toBaselineOf="@+id/new_student_national_id_field_title"
        app:layout_constraintStart_toEndOf="@+id/new_student_national_id_field_title" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/name_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_student_title" />

    <TextView
        android:id="@+id/create_student_title"
        android:layout_width="258dp"
        android:layout_height="48dp"
        android:layout_marginStart="76dp"
        android:layout_marginEnd="77dp"
        android:layout_marginBottom="424dp"
        android:text="@string/create_student_title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_student_picture_view"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/add_student_back_button"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="336dp"
        android:layout_marginBottom="656dp"
        android:text="&lt;"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/create_student_picture_view"
        android:layout_width="155dp"
        android:layout_height="148dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/profile_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_student_back_button" />

    <EditText
        android:id="@+id/new_student_name_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:ems="10"
        android:autofillHints="name"
        android:inputType="text"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/textView5" />

    <TextView
        android:id="@+id/new_student_email_field_title"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/email_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/new_student_national_id_field_title"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/national_id_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_student_email_field_title" />

    <TextView
        android:id="@+id/new_student_is_checked_field_title"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/is_checked_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_student_national_id_field_title" />

    <CheckBox
        android:id="@+id/new_student_is_checked_field"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginStart="12dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/new_student_is_checked_field_title"
        app:layout_constraintStart_toEndOf="@+id/new_student_is_checked_field_title" />

    <Button
        android:id="@+id/add_student_activity_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="150dp"
        android:text="@string/submit_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_student_is_checked_field" />

</androidx.constraintlayout.widget.ConstraintLayout>